@@ -1,3 +1,4 @@
+	* document deprecation of dynamic loading/unloading of torrents
 	* include user-agent in tracker announces in anonymous_mode for private torrents
 	* add support for IPv6 peers from udp trackers
 	* correctly URL encode the IPv6 argument to trackers
